2008-05-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Preliminary Tramp docs.
	(auth-sources): Change the default auth-sources to use
	EPA .gpg files.

2008-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el: Autoload `auth-source-user-or-password'.
	(nntp-send-authinfo): Use it.

	* nnimap.el: Autoload `auth-source-user-or-password'.
	(nnimap-open-connection): Use it.

	* auth-source.el: Added docs on using with url-auth.  Import gnus-util
	for the gnus-message function.
	(auth-source-user-or-password): Use it.

2008-05-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el: Adjusted copyright dates and added a keyword.

	* gnus-util.el (gnus-extract-address-component-name)
	(gnus-extract-address-component-email): Convenience functions around
	`gnus-extract-address-components'.

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): Use
	`gnus-extract-address-component-email' to fix bug of comparing full
	sender name to `user-mail-address'.

2008-05-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-grep-in-list): Fix logic, use
	catch/throw to optimize.
	(gnus-registry-find-keywords): Just use member to find a keyword.

2008-05-04  Juri Linkov  <juri@jurta.org>

	* mailcap.el (mailcap-replace-in-string): New compatibility alias.
	(mailcap-file-default-commands): Use mailcap-replace-in-string
	instead of replace-regexp-in-string, and mailcap-delete-duplicates
	instead of delete-dups.  Use [ \t\n]* for whitespace in regexp.

2008-05-03  Reiner Steib  <reiner.steib@gmx.de>

	* gnus-sum.el (gnus-propagate-marks): Fix custom version.

2008-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Bump version to 0.11

2008-05-01 Lars Magne Ingebrigtsen <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.10 is released.

2008-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-save-parts): Inhibit even more treatment
	hooks.